--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1 class="text-light"><a href="index.html">Jayant Bhopale</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/jayant-bhopale/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://github.com/jayantbhopale" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.github.com/jayantbhopale" class="github"><i class="bx bxl-github"></i></a>
           <a href="https://twitter.com/BhopaleJayant" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/jayantbhopale" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/jayantbhopale/" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -60,7 +60,7 @@
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#skills"><i class="bx bx-server"></i> Skills</a></li>
-          <li><a href="https://github.com/jayantbhopale"><i class="bx bx-book-content"></i> Portfolio</a></li>
+          <li><a href="https://www.github.com/jayantbhopale"><i class="bx bx-book-content"></i> Portfolio</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
 
         </ul>
