--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed and Developed by <a href="https://jayantbhopale.s3.us-east-2.amazonaws.com/index.html">Jayant </a>
+        Designed and Developed by <a href="https://jayantbhopale.github.io">Jayant </a>
       </div>
     </div>
   </footer><!-- End  Footer -->
