--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <section id="resume" class="resume section-bg">
       <div class="section-title">
       <h2>Resume</h2>
-      <embed src="JayantResume.pdf" type="application/pdf" width="100%" height="1300px" />
+      <embed src="JayantResumeSDE.pdf" type="application/pdf" width="100%" height="1300px" />
     </div>
     </section><!-- End Resume Section -->
     <section id="skills" class="skills section-bg">
