--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
         <div class="section-title">
           <h2>About</h2>
           <p>
-          	Experienced Software Developer, currently persuing Master of Science in Computer Science at The University of Texas at Dallas. Looking forward to work with passionate team focused on solving big problems with the help of emerging technology. 
-          </p>
+          	A graduate student in Computer Science with a strong background in programming, data structures, and software development. Actively seeking a full-time university graduate Software Developer role starting in May 2021.    </p>
         </div>
 
         <div class="row">
